syntax = "proto3";

package postapi;

option go_package = 'src/pkg/pb;pb';

message Post {
    string id = 1;
    string message = 2;
    string created_at = 3;
}

message CreatePostRequest {
    Post post = 1;
}

message CreatePostResponse {
    Post post = 1;
}

message GetPostRequest {
    string id = 1;
}

message GetPostResponse {
    Post post = 1;
}

service PostService {
    rpc CreatePost (CreatePostRequest) returns (CreatePostResponse);
    rpc GetPost (GetPostRequest) returns (GetPostResponse);
}